<resources>

    <string name="app_name">brovi</string>
    <!-- 
    <string name="app_name">智能云插座</string>
     -->
    <string name="wifi_first">请先连上Wi-Fi网络</string>
    <string name="wifi_name">Wi-Fi名称</string>
    <string name="tip_exit">再按一次退出程序</string>
    <string name="title_about">关于</string>
    <string name="appoinment">预约</string>
    <string name="timing">定时</string>
    <string name="timing_appointment">定时预约</string>
    <string name="delay">延时</string>
    <string name="delay_appointment">延时预约</string>
    <string name="consumption">设备时间：</string>
    <string name="start_time">开启时间</string>
    <string name="end_time">关闭时间</string>
    <string name="repeat">重复</string>
    
    <string name="tv">电视</string>
    <string name="socket">插座</string>
    <string name="aircondition">空调</string>
    <string name="fridge">冰箱</string>
    <string name="wash">洗衣机</string>
    <string name="dvd">DVD</string>
    <string name="sound">音响</string>
    <string name="kitchen">厨具</string>
    <string name="fan">风扇</string>
    <string name="please_connect_network">请连接网络！</string>
    
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="dialog_sure_to_delete">删除设备后，必须要分享设备或扫描二维码才能绑定设备。确定要删除设备吗？</string>
    <string name="dialog_sure_to_off">确定要关闭设备吗？</string>
    <string name="dialog_sure_psw_change">账号新密码即将生效，\n是否确认修改？</string>
    <string name="dialog_btn_back">返回</string>
    <string name="dialog_btn_logout">注销</string>
    <string name="dialog_btn_delete">删除</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_confirm">确定</string>
    <string name="dialog_nonet_msg">手机还未连上Wi-Fi，请连接上您希望设备接入的Wi-Fi（如您家里的Wi-Fi），连接后请返回APP，将自动跳转到下一步</string>
    <string name="dialog_logout_msg">确定要注销，返回登陆界面吗？</string>
    <string name="dialog_disconnect">连接已断开</string>
    <string name="register_name_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="airlink_tips_start">请按下设备按键,灯闪即表示设备已进入配置模式,\n点击开始配置</string>
    <string name="airlink_btn_start">开始配置</string>
    <string name="airlink_please_wait">设备连接中，请耐心等待.</string>
    <string name="airlink_tips_error1">配置失败了，让我们看看哪里可能出了错：</string>
    <string name="airlink_tips_error2">1.设备是否正常运行？\n2.Wi-Fi网络是否连接顺畅,密码是否正确？</string>
    <string name="airlink_tips_error3">请拔下设备电源，再重新接通电源，再点击重试</string>
    <string name="airlink_btn_retry">重试</string>
    <string name="airlink_btn_softap">手动配置</string>
    <string name="title_alarm_list">故障信息</string>
    <string name="btn_call">联系客服</string>
    <string name="autoconfig_keep_wifi">请保持Wi-Fi连接</string>
    <string name="autoconfig_password">Wi-Fi密码</string>
    <string name="btn_next">下一步</string>
    
    <string name="binding_start_config_text1">请在此界面等待几秒，界面将会自动跳转。</string>
    <!--  
    <string name="binding_start_config_text1">请按下设备按键,灯闪即表示设备已进入配置模式,\n请在此界面等待几秒，界面将会自动跳转。</string>
    -->
	<string name="binding_start_config_text2">界面一直没跳转？</string>
	<string name="binding_config_failed_text1">配置失败了，让我们看看哪里可能出了错：</string>
	<string name="binding_config_failed_text2">1.设备是否正常运行？\n2.Wi-Fi网络是否连接顺畅？</string>
	<string name="binding_config_failed_text3">请拔下设备电源，再重新接通电源，再点击重试</string>
	<string name="binding_config_failed_text4">我要重试</string>
	<!-- 
	<string name="binding_config_failed_text4">已经重新拔插电源了，我要重试</string>
	 -->
	<string name="new_password">新密码</string>
	<string name="change_password">修改密码</string>
	<string name="old_password">旧密码</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="password"> 密码</string>
	<string name="setting_password">设置密码</string>
	<string name="curve_text1">室内温度曲线</string>
	<string name="device_list">设备列表</string>
	<string name="music_device_manage">设备管理</string>
	<string name="add_device_manage">添加设备</string>
	<string name="device_manage">设备管理</string>
	<string name="device_details_text">型号：tp3321             生产日前：2013/01/01\n产地：中国             生产批次：338867A5</string>
	<string name="device_name">设备名称</string>
	<string name="name">名称</string>
	<string name="delete">删除</string>
	<string name="forget_password">忘记密码</string>
	<string name="forget_password_hint1">手机号/邮箱</string>
	<string name="forget_password_get_verifycode">获取验证码</string>
	<string name="forget_password_get_verifycode2">获取验\n证码</string>
	<string name="forget_password_get_verifycode3">秒后\n重新获取</string>
	<string name="forget_password_verifycode">验证码</string>
	<string name="forget_password_get_verifycode_again">重新获取\n验证码</string>
    <string name="help">帮助</string>
    <string name="privacy">隐私政策</string> 
    <string name="updated">检查更新</string>    
    <string name="help_for_device">设备使用帮助</string>
    <string name="help_for_app">APP使用帮助</string>
    <string name="login_name_hint"> 手机／邮箱</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_register_fast">快速注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="main_control_title">智能插座</string>
    <string name="main_control_turn_on">开机</string>
    <string name="main_control_timing_turn_on">定时开机</string>
    <string name="register_email">邮箱</string>
    <string name="register_use_mobilephone">手机注册</string>
    <string name="register_use_email">邮箱注册</string>
    <string name="register_tips1">请输入您的真实邮箱，确保日后可找回密码。\n注册成功后会向您发送邮件</string>
    <string name="register_phone_num">手机号</string>
    <string name="search_device_already_configure">已配置的设备</string>
    <string name="search_device_tips1">你的网络中还没有已配置的设备,如已经配置过,\n请确认手机正连接着与设备相同的wifi.</string>
	<string name="search_device_configure_qr_code">二维码扫描添加虚拟设备</string>
	<string name="search_device_configure">配置你的设备</string>
	<string name="account_manage">账号管理</string>
	<string name="about">关于</string>
	<string name="back_to_device_list">返回设备列表</string>
	<string name="softap_text1">1.请复制以下密码:</string>
	<string name="softap_password">123456789</string>
	<string name="softap_text2">2.请进入设置>Wi-Fi，选择XPG-GAGENT-XXXX(XXXX为本模块mac的后四位),输入刚刚复制的密码;</string>
	<string name="softap_text3">3.完成后请返回此界面,将自动跳转到下一步.</string>
	<string name="softap_text4">Wi-Fi名称:home</string>
	<string name="softap_text5">Wi-Fi密码</string>
	<string name="softap_text6">连接网络</string>
	<string name="softap_text7">设备连接中，请耐心等待.</string>
	<string name="softap_text8">配置成功，记得切换回Wi-Fi网络哦！</string>
	<string name="softap_text9">切换好了</string>
	<string name="softap_text10">配置失败了,请拔下设备电源,再重新接通电源，再点击重试。</string>
	<string name="softap_text11">我已经重新拔插电源了，我要重试</string>
	<string name="user_manage">用户管理</string>
	<string name="user_name">用户名</string>
	<string name="logout">注销</string>
	<string name="change_success">修改成功</string>
	<string name="change_fail">修改失败</string>
	
	<string name="no_device">没有设备</string>
	<string name="device_online">在线设备</string>
	<string name="remote_online">在线设备</string>
	<string name="not_processing">暂不处理</string>
	<string name="call_customer_service">拨打客服</string>
	
	<string name="dialog_call_sure_to_logout">确定要注销，返回登陆界面吗？</string>
	<string name="call_customer_service_hot_line">拨打客服热线</string>
	<string name="qr_code_tips">将二维码放入框内，即刻自动扫描</string>
	
	<string name="reset_by_phone">通过手机重置密码</string>
	<string name="reset_by_email">通过邮箱重置密码</string>
	
	<!-- <string name="scan_text">将二维码放入框内, 即可自动扫描</string> -->
	<string name="scan_text">将二维码放入框内, 即可自动扫描</string>
	
	<string name="device_wifi">路由SSID</string>	
	<string name="device_music">音乐魔饼</string>
	<string name="WifiAmplifer">wifi放大器</string>
	<string name="music_pro_name">设备型号:</string>
	<string name="music_r_ssid">主路由SSID:</string>
	<string name="music_d_ssid">设备SSID:</string>
	<string name="music_versions">固件版本:</string>
	<string name="wifi_config">WIFI配置</string>
	<string name="add_device">添加设备</string>
	<string name="device_bind">设备绑定</string>
	<string name="user_register">帐户登录</string>
	<string name="user_name_brovi">brovi</string>
	<string name="device_mac">设备MAC地址:</string>
	<string name="reset">重启设备</string>
	<string name="restart">恢复原厂设置</string>
	<string name="devicename">设备名称</string>
	<string name="nodevicelist">您未绑定任何设备</string>
	<string name="admendevicename">修改</string>
	<string name="register_phone">注册</string>
	<string name="share">设备分享</string>
	<string name="dialog_restart_msg">确定要重启设备？</string>
	<string name="dialog_reset_msg">恢复原厂设置后要重新扫描二维码配置，才能绑定设备。您确认要将设备恢复原厂设置吗？</string>
	<string name="dialog_reshuffle_msg">要恢复原厂设置后重新配置设备</string>
	<string name="airlink_tips_error4">请接下复位键5秒后，恢复原厂设置，再点击重试</string>
	<string name="dialog_left">取消</string>
	<string name="dialog_right">确定</string>
	<string name="add_device_error">添加不成功\n请检查是否为brovi产品的二维码</string>
	<string name="new_scan">重新扫描</string>
	<string name="update">更新</string>
	<string name="signal_intension">信号强度:</string>
	<string name="netname">放大器网络</string>
	<string name="encryption">加密</string>
	<string name="noencryption">不加密</string>
	<string name="chang_route">更改名称</string>
	<string name="pls_pwd">请输入路由名称</string>
	<string name="chang_pwd">更改密码</string>
	<string name="pls_input_newpwd">请输入新密码</string>
	<string name="pls_input_pwd">新密码:</string>
	<string name="version">Versions:0.0.0.004</string>
	<string name="music_ximayala">喜马拉雅</string>
	<string name="net_problem">网络不给力</string>
	
	
</resources>
