<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--   <RelativeLayout
        android:id="@+id/rlTop"
        style="@style/TopLayout">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:padding="10dp"
            android:src="@drawable/icon_return" />

        <ImageView
            android:id="@+id/ivStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/step_press" />
    </RelativeLayout>
     -->
  
     <RelativeLayout
        android:id="@+id/rlTop"
        style="@style/TopLayout" >

        <ImageView
            android:id="@+id/ivLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:src="@drawable/icon_return" />

        <TextView
            android:id="@+id/dev_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/device_bind"
            android:textColor="@color/text_blue"
            android:textSize="22sp" />
	<!-- 
			 <ImageView
            android:id="@+id/ivAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/add_icon" />
	 -->
       
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/llStartConfig"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:src="@drawable/head_icon10" />
<!-- android:src="@drawable/airlink_button" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/binding_start_config_text1"
            android:textColor="@color/text_blue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvPress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/binding_start_config_text2"
            android:textColor="@color/text_blue"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConfigFailed"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/binding_config_failed_text1"
            android:textColor="@color/text_blue"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/binding_config_failed_text2"
            android:textColor="@color/text_black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/binding_config_failed_text3"
            android:textColor="@color/text_blue"
            android:textSize="14sp" />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/btnRetry"
            style="@style/ButtonBlue"
            android:text="@string/binding_config_failed_text4" />

    </LinearLayout>
</LinearLayout>
