<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@color/grey_word_page_3"
    android:orientation="vertical" >

    <!--
     <RelativeLayout
        android:id="@+id/rlTop"
        style="@style/TopLayout" >

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:src="@drawable/icon_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_password"
            android:textColor="@color/text_blue"
            android:textSize="22sp" />
    </RelativeLayout>
      -->
   
 <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3.5">
        
    <RelativeLayout
        android:id="@+id/Top"
        style="@style/registerTopLayout" >
        
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/return_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="22sp" />

         
    </RelativeLayout>
    
        <LinearLayout 
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/head_top_1">
            <ImageView 
                android:id="@+id/user_register_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            
            
        </LinearLayout> 
        
    </LinearLayout>
    
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.7"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etPswOld"
            style="@style/EditTextTheme"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="10dp"
            android:background="@drawable/login_input_box"
            android:digits="@string/register_name_digits"
            android:hint="@string/old_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etPswNew"
            style="@style/EditTextTheme"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/login_input_box"
            android:digits="@string/register_name_digits"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <ToggleButton
            android:id="@+id/tbPswFlag"
            android:layout_width="50dp"
            android:layout_height="24dp"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:background="@drawable/toggle_selector"
            android:textOff=""
            android:textOn="" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/ButtonBlue"
            android:layout_marginTop="10dp"
            android:text="@string/confirm" />
        
      <RelativeLayout
        android:id="@+id/rlResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/background_blue"
            android:textColor="@color/white"
            android:paddingBottom="15dp"
            android:paddingLeft="38dp"
            android:paddingRight="38dp"
            android:paddingTop="15dp"
            android:text="@string/change_success"
            android:textSize="15sp" />
    	</RelativeLayout>
    </LinearLayout>

    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:background="@drawable/bottom">
    </RelativeLayout>

</LinearLayout>
